--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,9 +1,19 @@
 body {
   font-family: 'Roboto', sans-serif;
   color: #333;
+  width: 100%;
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+
+a {
+  color: $mainOrange;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
 }
