sticky header with smooth scrolling

--- a/app/assets/styles/modules/_primary-nav.css
+++ b/app/assets/styles/modules/_primary-nav.css
@@ -3,7 +3,7 @@
 
   @mixin atMedium {
     padding-top: 0;
-    
+
     &--pull-right {
       float: right;
     }
@@ -47,6 +47,10 @@
       font-size: 1rem;
       padding: 12px 0;
       background-color: transparent;
+
+      &.is-current-link {
+        color: #fabb69;
+      }
     }
   }
 }
