--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -23,12 +23,13 @@
   &__title {
     font-weight: 300;
     color: $mainBlue;
-    font-size: 2.4rem;
     margin: 0;
-
+    font-size: 2.4rem;
+  
     @mixin atSmall {
       font-size: 4.8rem;
     }
+
   }
 
   &__subtitle {
@@ -40,13 +41,14 @@
     @mixin atSmall {
       font-size: 2.9rem;
     }
+
   }
 
   &__description {
     color: #FFF;
     font-size: 1.1rem;
     font-weight: 100;
-    text-shadow: 2px 2px 0 rgba(0, 0, 0, 0.1);
+    text-shadow: 2px 2px 0 rgba(0, 0, 0, .1);
     max-width: 30rem;
     margin-left: auto;
     margin-right: auto;
@@ -55,4 +57,5 @@
       font-size: 1.875rem;
     }
   }
+
 }
