--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -2,9 +2,9 @@
   padding: 1.2rem 0;
 
   @mixin atMedium {
-    padding: 4.5rem 0
+    padding: 4.5rem 0;
   }
-
+  
   &--no-b-padding-until-medium {
     padding-bottom: 0;
 
@@ -22,8 +22,8 @@
   }
 
   &--blue {
-    color: #FFF;
     background-color: $mainBlue;
+    color: #FFF;
   }
 
   &--testimonials {
@@ -33,6 +33,6 @@
       background: url('/assets/images/testimonials-bg.jpg') top center no-repeat;
       background-size: cover;
     }
-
   }
+
 }
