--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,16 +1,21 @@
 .row {
+
   @mixin clearfix;
 
+  &--t-padding {
+    padding-top: 80px;
+  }
+
   &--gutters {
-      margin-right: -65px;
+    margin-right: -65px;
   }
 
   &--gutters-large {
-      margin-right: -100px;
+    margin-right: -100px;
   }
 
   &--gutters-small {
-      margin-right: -45px;
+    margin-right: -45px;
   }
 
   &--gutters > div {
@@ -26,81 +31,82 @@
   }
 
   &__b-margin-until-medium {
-      margin-bottom: 1rem;
-  }
-
-  &--t-padding {
-    padding-top: 80px;
+    margin-bottom: 1rem;
   }
 
   @mixin atMedium {
+
+    &__b-margin-until-medium {
+      margin-bottom: 0;
+    }
+
     &__medium-4 {
       float: left;
-      width: 33.33%
+      width: 33.33%;
     }
 
     &__medium-4--larger {
       width: 37%;
     }
 
+    &__medium-6 {
+      float: left;
+      width: 50%;
+    }
+
     &__medium-8 {
       float: left;
-      width: 66.66%
+      width: 66.66%;
     }
 
     &__medium-8--smaller {
       width: 63%;
     }
 
-    &__b-margin-until-medium {
-        margin-bottom: 0;
-    }
-
-    &__medium-6 {
-      float: left;
-      width: 50%
-    }
   }
 
   @mixin atLarge {
+
+    &__b-margin-until-large {
+      margin-bottom: 0;
+    }
+
     &__large-4 {
       float: left;
-      width: 33.33%
+      width: 33.33%;
     }
 
     &__large-4--larger {
       width: 37%;
     }
 
+    &__large-6 {
+      float: left;
+      width: 50%;
+    }
+
     &__large-8 {
       float: left;
-      width: 66.66%
+      width: 66.66%;
     }
 
     &__large-8--smaller {
       width: 63%;
     }
 
-    &__b-margin-until-large {
-        margin-bottom: 0;
-    }
-
-    &__large-6 {
-      float: left;
-      width: 50%
-    }
   }
-
-  /* Equal height rules */
+  
+  /* Begin Equal Height Rules */
   &--equal-height-at-medium {
     @mixin atMedium {
       display: flex;
     }
 
     & > div {
-      float:none;
+      float: none;
       display: flex;
     }
+
   }
 
   &--equal-height-at-large {
@@ -109,9 +115,10 @@
     }
 
     & > div {
-      float:none;
+      float: none;
       display: flex;
     }
+
   }
 
 }
