--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -6,12 +6,18 @@
   @mixin atSmall {
     font-size: 3.75rem;
   }
+
   strong {
     font-weight: 500;
   }
 
   &--blue {
     color: $mainBlue;
+  }
+
+  &--less-margin {
+    margin-bottom: 1.3rem;
+    margin-top: 0;
   }
 
   &__icon {
@@ -25,8 +31,9 @@
       top: 8px;
       margin-right: .5rem;
       margin-left: 0;
-      display: inline-block;
       margin-bottom: 0;
+      display: inline-block;
     }
   }
+
 }
