--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -1,40 +1,38 @@
 .site-header {
-  position: absolute;
-  z-index: 2;
-  width: 100%;
   padding: 10px 0;
+  position: absolute;
+  width: 100%;
+  z-index: 2;
   transition: background-color .3s ease-out;
 
-  @mixin atMedium {
-    background-color: rgba($mainBlue, .3);
-    position: fixed;
+  &--is-expanded {
+    background-color: rgba($mainBlue, .55);
   }
+  
+  @mixin atMedium {
+    position: fixed;
+    background-color: rgba($mainBlue, .3);
 
-  &--dark {
-    background-color: rgba(23, 51, 72, .85);
+    &--dark {
+      background-color: rgba(23, 51, 72, .85);
+    }
   }
 
   &__btn-container {
-
     @mixin atMedium {
       float: right;
     }
   }
 
-  &--is-expanded {
-      background-color: rgba($mainBlue, .65);
-  }
-
   &__logo {
     position: absolute;
-    background-color: $mainBlue;
-    padding: 25px 36px;
     top: 0;
     left: 50%;
     transform: translateX(-50%) scale(.8);
+    transition: transform .3s ease-out;
     transform-origin: 50% 0;
-    transform: scale(1);
-    transition: transform .5s ease-out;
+    background-color: $mainBlue;
+    padding: 25px 36px;
 
     @mixin atMedium {
       left: auto;
@@ -54,9 +52,9 @@
     width: 20px;
     height: 19px;
     position: absolute;
+    z-index: 10;
     top: 10px;
     right: 10px;
-    z-index: 10;
 
     &::before {
       content: "";
@@ -78,6 +76,7 @@
       height: 3px;
       background-color: #FFF;
       transition: all .3s ease-out;
+      transform-origin: 0 50%;
     }
 
     &::after {
@@ -106,6 +105,7 @@
       opacity: 0;
       transform: scaleX(0);
     }
+
     &::after {
       transform: rotate(-45deg) scaleX(1.25) translateY(1px);
     }
@@ -117,7 +117,7 @@
     transition: all .3s ease-out;
     position: relative;
     z-index: -10;
-    padding-top: 100px;
+    padding-top: 90px;
     text-align: center;
 
     @mixin atMedium {
@@ -128,9 +128,9 @@
     }
 
     &--is-visible {
-      transform: scale(1);
       opacity: 1;
-      z-index: 10;
+      z-index: 1;
+      transform: scale(1);
     }
   }
 }
