--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -10,6 +10,10 @@
     max-width: 976px;
   }
 
+  &--narrow {
+    max-width: 470px;
+  }
+
   &--no-padding-until-medium {
     padding-left: 0;
     padding-right: 0;
@@ -30,18 +34,17 @@
     }
   }
 
-  /*eliminates padding if a wrapper is inside another wrapper*/
   .wrapper {
     padding-left: 0;
     padding-right: 0;
   }
 
   &--b-margin {
-
     margin-bottom: 1rem;
 
     @mixin atSmall {
-        margin-bottom: 3.875rem;
+      margin-bottom: 3.875rem;
     }
   }
+
 }
